@@ -13,6 +13,9 @@ Release 2.6.0 - 2014-11-18
     tasks below for features and contributors).
 
   IMPROVEMENTS
+    HDFS-9958. BlockManager#createLocatedBlocks can throw NPE for corruptBlocks
+    on failed storages. (Kuhu Shukla via kihwal)
+
     HDFS-9406. FSImage may get corrupted after deleting snapshot.
     (Contributed by Jing Zhao, Stanislav Antic, Vinayakumar B, Yongjun Zhang)
 
